<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="200dp"
            android:text="@string/my_account_ye"
            android:textColor="@color/text_color"
            android:textSize="@dimen/tv_text_size" />

        <TextView
            android:id="@+id/tv_ye"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/tv_text_size" />


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="200dp"
            android:text="车        号:"
            android:textColor="@color/text_color"
            android:textSize="@dimen/tv_text_size" />

        <Spinner
            android:id="@+id/sp_ch"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:entries="@array/ch"
            android:textColor="@color/text_color"
            android:textSize="@dimen/tv_text_size" />


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="200dp"
            android:text="@string/my_account_add"
            android:textColor="@color/text_color"
            android:textSize="@dimen/tv_text_size" />

        <EditText
            android:id="@+id/et_add"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:inputType="number"
            android:textColor="@color/text_color"
            android:textSize="@dimen/tv_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="元"
            android:textColor="@color/text_color"
            android:textSize="@dimen/tv_text_size" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_query"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="200dp"
            android:background="@drawable/bg_y"
            android:text="@string/query"
            android:textColor="@color/text_color"
            android:textSize="@dimen/bt_text_size" />

        <Button
            android:id="@+id/bt_recharge"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="200dp"
            android:background="@drawable/bg_y"
            android:text="@string/recharge"
            android:textColor="@color/text_color"
            android:textSize="@dimen/bt_text_size" />


    </LinearLayout>

</LinearLayout>